Style correction  for input on mobile devices.

--- a/public/style.css
+++ b/public/style.css
@@ -120,7 +120,7 @@ button:hover {
   }
 
   input[type="text"] {
-    width: 100%;
+    width: 90%;
     font-size: 16px;
   }
 
